--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ const sections = {
     ["tcl", "Toggles No-clip mode (Fly, walk through walls)"],
     ["coc \"Location\"", "Teleports you to that location. 'coc QASmoke' is the all item room."],
     ["psb", "Give all spells to player"],
-    ["kah", "Kill all hostile NPCs"]
+    ["kah", "Kill all hostile NPCs"],
     ["player.advlevel", "Force a Level Up (No perk points added)"],
     ["caqs", "Complete all Quest Stages, Achievements."],
     ["tmm 1", "Unlock all Map Markers"],
@@ -1238,7 +1238,7 @@ const sections = {
   // Legendary Dragon (Dawnguard DLC, replace xx with your load order)
   ["player.placeatme xx00C5F5", "Spawn Legendary DragonDG (Purple, Fire)"],
   ["player.placeatme 00023AAE", "Spawn Giant"],
-  ["player.placeatme 00023AB4", "Spawn Mammoth"],
+  ["player.placeatme 00023AB4", "Spawn Mammoth"]
   ],
   "Weapon Enchantments": [
     ["playerenchantobject <ObjectID> <Enchantment ID> <Enchantment ID>", "Enter the item ID, then enchant ID, then (optional) second enchant ID."],
